--- a/ExifToolPrivacy.html
+++ b/ExifToolPrivacy.html
@@ -60,9 +60,9 @@
         <li><a href="https://firebase.google.com/policies/analytics" target="_blank">Firebase
             Analytics</a></li>
         <li><a href="https://firebase.google.com/terms/crashlytics" target="_blank">Firebase
-            Crashlytics</a></li><!---->
-        <li><a href="https://fabric.io/privacy" target="_blank">Fabric</a></li><!----><!----><!---->
-        <!----><!----><!----><!----><!----></ul>
+            Crashlytics</a></li>
+        <li><a href="https://www.facebook.com/about/privacy/update/printable" target="_blank">Facebook</a></li>        
+    </ul>
 </div>
 <p><strong>Log Data</strong></p>
 <p>
