--- a/ExifToolPrivacy.html
+++ b/ExifToolPrivacy.html
@@ -48,10 +48,12 @@
     The app does use third party services that may collect
     information used to identify you.
 </p>
-<div><p>
+<div>
+    <p>
     Link to privacy policy of third party service providers
     used by the app
 </p>
+<p><strong>For app downloaded from Google Play</strong></p>    
     <ul>
         <li><a href="https://www.google.com/policies/privacy/" target="_blank">Google Play
             Services</a></li>
@@ -63,6 +65,10 @@
             Crashlytics</a></li>
         <li><a href="https://www.facebook.com/about/privacy/update/printable" target="_blank">Facebook</a></li>        
     </ul>
+<p><strong>For app downloaded for none-google services</strong></p>     
+    <ul>
+        <li><a href="https://www.facebook.com/about/privacy/update/printable" target="_blank">Facebook</a></li>        
+    </ul>    
 </div>
 <p><strong>Log Data</strong></p>
 <p>
