--- a/ViPhamGiaoThong.html
+++ b/ViPhamGiaoThong.html
@@ -8,10 +8,8 @@
     </head>
     <body>
     <h2>Privacy Policy</h2> <p>
-                     built the Vi Phạm Giao Thông app as
-                    an Ad Supported app. This SERVICE is provided by
-                     at no cost and is intended for
-                    use as is.
+                   Vi Phạm Giao Thông app is an ad-application to support VietNam's police department to search the violation of citizen's vehicles. <br/>
+                   <b>Disclaimer:</b> We are just an middle to deliver the result from Viet Nam's police deparment and we have no collect or saving any related data from user, the data result is fetching from https://csgt.vn, belong with VietNam's police head department.
                   </p> <p>
                     This page is used to inform visitors regarding
                     my policies with the collection, use, and
@@ -112,7 +110,7 @@
                   </p> <p><strong>Contact Us</strong></p> <p>
                     If you have any questions or suggestions about
                     my Privacy Policy, do not hesitate to contact
-                    me at kingvhit@gmail.com.
+                    me at cellhubsapp@gmail.com.
                   </p>
     </body>
     </html>
