--- a/ViPhamGiaoThong.html
+++ b/ViPhamGiaoThong.html
@@ -7,15 +7,17 @@
       <style> body { font-family: 'Helvetica Neue', Helvetica, Arial, sans-serif; padding:1em; } </style>
     </head>
     <body>
-    <h2>Privacy Policy</h2> <p>
-                   Vi Phạm Giao Thông app is an ad-application to support VietNam's police department to search the violation of citizen's vehicles. <br/>
-                   <b>Disclaimer:</b> We are just an middle to deliver the result from Viet Nam's police deparment and we have no collect or saving any related data from user, the data result is fetching from https://csgt.vn, belong with VietNam's police head department.
-                  </p> <p>
+    <h2>Privacy Policy</h2>
+                   <p>Vi Phạm Giao Thông app is an ad-application to support VietNam's police department to search the violation of citizen's vehicles. <br/><br/></p>
+                   <b>Disclaimer:</b> 
+                   <p>We are just an middle to deliver the result from Viet Nam's police deparment and we have no collect or saving any related data from user, the data result is fetching from https://csgt.vn, belong with VietNam's police head department.</p>
+                  <p>
                     This page is used to inform visitors regarding
                     my policies with the collection, use, and
                     disclosure of Personal Information if anyone decided to use
                     my Service.
-                  </p> <p>
+                  </p> 
+                  <p>
                     If you choose to use my Service, then you agree
                     to the collection and use of information in relation to this
                     policy. The Personal Information that I collect is
