--- a/ViPhamGiaoThong.html
+++ b/ViPhamGiaoThong.html
@@ -10,7 +10,7 @@
     <h2>Privacy Policy</h2>
                    <p>Vi Phạm Giao Thông app is an ad-application to support VietNam's police department to search the violation of citizen's vehicles. <br/><br/></p>
                    <b>Disclaimer:</b> 
-                   <p>We are just an middle to deliver the result from Viet Nam's police deparment and we have no collect or saving any related data from user, the data result is fetching from https://csgt.vn, belong with VietNam's police head department.</p>
+                   <p>We are just an middle to deliver the result from Viet Nam's police deparment and we have no collect or saving any related data from user, the data result is fetching from <a href="https://csgt.vn" target="_blank">csgt.vn</a>, belong with VietNam's police head department.</p>
                   <p>
                     This page is used to inform visitors regarding
                     my policies with the collection, use, and
